# ableton-live-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  corpus.pdf.dvc  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
ableton_live_rag/: cli.py  config.py  index.py  ingest.py  llm.py  query.py
ableton_live_rag/eval/retriever/: metrics.py  retrievers.py  run_experiments.py
experiments/: eval_dataset.json  metrics.py  test_dataset.json  utils.py
experiments/reranker/: rerankers.py  run.py
experiments/retriever/: retrievers.py  run.py
scripts/: build_eval_indexes.py  download_corpus.sh
